syntax = "proto3";

package image_transfer;

service ImageTransfer {
  rpc TransferImages (stream ImageData) returns (stream Ack) {}
}

message ImageData {
  uint64 timestamp = 1;
  bytes image = 2;
}

message Ack {
  uint32 size = 1;
  int32 error = 2;
} 